update upper case

--- a/templates/update.html
+++ b/templates/update.html
@@ -8,7 +8,7 @@
       <input type="text" required="" class="update--input" name="title" id="title" name="title" value="{{todo.title}}"aria-describedby="emailHelp">
     </div>
     
-    <button type="submit" class="todo--button" >Update</button>
+    <button type="submit" class="todo--button" >UPDATE</button>
   </form>
   </div>
 
